# udp-to-rabbitmq-gateway

./: .gitignore  CMakeLists.txt  README.md  cleanup.sh  docker-cleanup.sh
components/protocol_parser/: CMakeLists.txt  DockerFile  README.md  docker-compose.yml
components/protocol_parser/cmake/: protocol_parser-config.cmake.in
components/protocol_parser/config/: protocol_parser_config.json
components/protocol_parser/example/: CMakeLists.txt  integration_example.cpp  simple_parser.cpp
components/protocol_parser/include/protocol_parser/: builder.hpp  config.hpp  error.hpp  message.hpp  parser.hpp  protocol.hpp  types.hpp  validator.hpp
components/protocol_parser/src/: builder.cpp  config.cpp  error.cpp  message.cpp  parser.cpp  types.cpp  validator.cpp
components/protocol_parser/test/: CMakeLists.txt
components/protocol_parser/test/unit/: CMakeLists.txt  builder_test.cpp  message_test.cpp  parser_test.cpp  validator_test.cpp
components/rabbitmq_integration/: CMakeLists.txt  DockerFile  LICENSE  README.md
components/rabbitmq_integration/benchmark/: benchmark_publisher.cpp
components/rabbitmq_integration/cmake/: rabbitmq-integration-config.cmake.in
components/rabbitmq_integration/config/: development.json  production.json  testing.yaml
components/rabbitmq_integration/example/: CMakeLists.txt  simple_consumer.cpp  simple_publisher.cpp  telemetry_publisher_example.cpp
components/rabbitmq_integration/include/rabbitmq_integration/: channel.hpp  connection.hpp  connection.hpp.broken  consumer.hpp  local_queue.hpp  message.hpp  metrics.hpp  publisher.hpp  queue_manager.hpp  types.hpp
components/rabbitmq_integration/src/: channel.cpp  connection.cpp  consumer.cpp  local_queue.cpp  message.cpp  metrics.cpp  publisher.cpp  queue_manager.cpp  types.cpp
components/rabbitmq_integration/test/: CMakeLists.txt  simple_test.cpp
components/rabbitmq_integration/test/unit/: test_local_queue.cpp  test_message.cpp  test_types.cpp
components/rabbitmq_integration/test/utils/: test_utils.cpp  test_utils.hpp
components/redis_deduplication/: CMakeLists.txt  DockerFile  README.md  docker-compose.yml
components/redis_deduplication/cmake/: redis-deduplication-config.cmake.in
components/redis_deduplication/example/: CMakeLists.txt  config_example.cpp  simple_deduplication.cpp
components/redis_deduplication/include/redis_deduplication/: connection_pool.hpp  deduplicator.hpp  local_cache.hpp  redis_client.hpp  types.hpp
components/redis_deduplication/src/: connection_pool.cpp  deduplicator.cpp  local_cache.cpp  redis_client.cpp  types.cpp
components/redis_deduplication/test/: CMakeLists.txt
components/redis_deduplication/test/integration/: test_deduplicator.cpp  test_redis_client.cpp
components/redis_deduplication/test/unit/: test_compilation.cpp  test_local_cache.cpp  test_message_id.cpp  test_types.cpp
components/udp-gateway/: CMakeLists.txt  DockerFile  README.md  debug-tests.sh  docker-compose.yml  run-tests.sh  setup-mock-interfaces.sh
components/udp-gateway/build-test/Testing/Temporary/: CTestCostData.txt
components/udp-gateway/build-test/test/: mock_interfaces.hpp  rate_limiter_test  types_test
components/udp-gateway/example/: CMakeLists.txt  simple_gateway.cpp
components/udp-gateway/include/udp_gateway/: gateway.hpp  rate_limiter.hpp  session.hpp  types.hpp
components/udp-gateway/src/: gateway.cpp  main.cpp  rate_limiter.cpp  session.cpp  test_gateway.cpp  test_rate_limiter.cpp  test_session.cpp  test_with_mocks.cpp
components/udp-gateway/test/: CMakeLists.txt  mock_interfaces.hpp.in
components/udp-gateway/test/unit/: gateway_test.cpp  rate_limiter_test.cpp  session_test.cpp  types_test.cpp
docker/: DockerFile.dev
